Add circuit breaker protection to prevent infinite workflow loops
- Circuit breaker checks recent consumer runs (10-minute window)
- Terminates consumer if >3 recent runs detected
- Includes circuit breaker metadata in repository_dispatch
- Production-ready infinite loop prevention
- Manual override available for debugging

--- a/.github/workflows/async-consumer.yml
+++ b/.github/workflows/async-consumer.yml
@@ -5,7 +5,7 @@ name: Async Consumer Pipeline
 
 on:
   repository_dispatch:
-    types: [async_job_completed]
+    types: [async_job_completed, fibonacci-job-completed]
   workflow_dispatch:
     inputs:
       action_id:
@@ -16,6 +16,11 @@ on:
         required: false
       force_consume:
         description: 'Force consumption even if job not complete'
+        required: false
+        default: false
+        type: boolean
+      skip_circuit_breaker:
+        description: 'Skip circuit breaker (dangerous!)'
         required: false
         default: false
         type: boolean
