Complete GitHub Actions optimization: All workflows now manual dispatch only
- Convert async-state-machine.yml to workflow_dispatch only
- Convert pubsub-async-pipeline.yml to workflow_dispatch only
- Move ci-cd.yml out of workflows directory
- Add cost analysis and runner scaling documentation
- Add runner management scripts

Result: Zero auto-triggering workflows = No queue congestion with single runner

--- a/.github/workflows/async-state-machine.yml
+++ b/.github/workflows/async-state-machine.yml
@@ -5,12 +5,18 @@
 name: Async State Machine Pipeline
 
 on:
-  push:
-    branches: [ master, main ]
-  pull_request:
-    branches: [ master, main ]
   workflow_dispatch:
     inputs:
+      stage:
+        description: 'Pipeline stage to run'
+        required: false
+        default: 'all'
+        type: choice
+        options:
+        - all
+        - event-publisher
+        - secrets-subscriber
+        - build-subscriber
       pipeline_config:
         description: 'Pipeline configuration JSON'
         required: false
