--- a/.github/workflows/test-async-feedback-loop.yml
+++ b/.github/workflows/test-async-feedback-loop.yml
@@ -30,7 +30,7 @@ jobs:
   # TRIGGER PRODUCER
   # ================================
   trigger-producer:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       producer-run-id: ${{ steps.trigger.outputs.producer-run-id }}
     steps:
@@ -75,7 +75,7 @@ jobs:
   # ================================
   wait-for-callback:
     needs: trigger-producer
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Simulate Callback Wait
         run: |
@@ -102,7 +102,7 @@ jobs:
   # ================================
   manual-consumer-test:
     needs: [trigger-producer, wait-for-callback]
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.event.inputs.test_type == 'manual_consumer'
     steps:
       - name: Find Producer Action ID
@@ -148,7 +148,7 @@ jobs:
   # ================================
   validate-feedback-loop:
     needs: [trigger-producer, wait-for-callback]
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: always()
     steps:
       - name: Validate Complete Cycle
