--- a/.github/workflows/fibonacci-producer.yml
+++ b/.github/workflows/fibonacci-producer.yml
@@ -48,7 +48,7 @@ jobs:
   # FIBONACCI JOB PUBLISHER
   # ================================
   publish-fibonacci-job:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       action-id: ${{ steps.publish.outputs.action-id }}
       correlation-id: ${{ steps.publish.outputs.correlation-id }}
@@ -304,7 +304,7 @@ jobs:
   # ================================
   non-blocking-demo:
     needs: publish-fibonacci-job
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Show Non-Blocking Behavior
         run: |
