--- a/.github/workflows/fibonacci-simple.yml
+++ b/.github/workflows/fibonacci-simple.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   fibonacci-producer:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -104,7 +104,7 @@ jobs:
           echo "🎯 Result: GitHub Actions is now NON-BLOCKING for Fibonacci! 🚀"
 
   circuit-breaker-demo:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: fibonacci-producer
     steps:
       - name: Circuit Breaker Protection Demo
