--- a/.github/workflows/test-cancellable.yml
+++ b/.github/workflows/test-cancellable.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test-job:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
       - name: Long Running Process (Cancellable)
