Fix: Add push trigger to async-consumer workflow for GitHub recognition

--- a/.github/workflows/async-consumer-v1.0.0.yml
+++ b/.github/workflows/async-consumer-v1.0.0.yml
@@ -1,6 +1,8 @@
 name: Async Consumer with Circuit Breaker
 
 on:
+  push:
+    branches: [ master ]
   repository_dispatch:
     types: [async_job_completed, fibonacci-job-completed]
   workflow_dispatch:
