Fix: Add push triggers to all workflows for GitHub recognition
- Add push trigger to 8 remaining unrecognized workflows
- GitHub only indexes workflows with standard triggers (push, pull_request, workflow_dispatch)
- repository_dispatch-only workflows are not indexed in GitHub UI
- All 13 workflows now have proper triggers for recognition

--- a/.github/workflows/async-producer-v1.0.0.yml
+++ b/.github/workflows/async-producer-v1.0.0.yml
@@ -1,6 +1,8 @@
 # Async Producer - Publishes events and starts processing
 # This workflow triggers async processing and exits immediately (non-blocking)
 
+  push:
+    branches: [ master ]
 name: Async Producer Pipeline
 
 on:
