--- a/.github/workflows/simple-test-v1.0.0.yml
+++ b/.github/workflows/simple-test-v1.0.0.yml
@@ -1,6 +1,8 @@
 # Simple Test Workflow v1.0.0
 # Version: 1.0.0
 # Created: 2024-01-26
+  push:
+    branches: [ master ]
 # Purpose: Basic workflow to test GitHub Actions functionality
 
 name: Simple Test v1.0.0
