🔧 Fix repository dispatch - Add GitHub token
CRITICAL FIX:
- Added GH_TOKEN: ${{ github.token }} to repository dispatch step
- Previous attempts failed with 'set the GH_TOKEN environment variable'
- Now repository dispatch should work automatically

Producer → Repository Dispatch → Consumer auto-trigger ready! ✅

--- a/.github/workflows/fibonacci-simple-v1.0.0.yml
+++ b/.github/workflows/fibonacci-simple-v1.0.0.yml
@@ -106,6 +106,8 @@ jobs:
           echo "🎯 Result: GitHub Actions is now NON-BLOCKING for Fibonacci! 🚀"
           
       - name: Auto-Trigger Consumer via Repository Dispatch
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           echo ""
           echo "🔔 AUTO-TRIGGERING CONSUMER VIA REPOSITORY DISPATCH"
