🚀 Add Maven integration for unified async WildFly system
✅ Features:
- Complete Maven integration with exec-maven-plugin
- Four async commands: start, stop, deploy, status
- Configurable properties for job types and environments
- Circuit breaker integration via Maven
- Comprehensive documentation and examples
- Production deployment protection
- Real-time progress monitoring

🎯 Usage:
- mvn exec:exec@wildfly-start-async
- mvn exec:exec@wildfly-deploy-async
- mvn exec:exec@wildfly-status-async
- mvn exec:exec@wildfly-stop-async

🛡️ Unified async architecture now fully integrated with Maven build lifecycle

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
         <mockito.version>5.3.1</mockito.version>
         <slf4j.version>2.0.7</slf4j.version>
         <logback.version>1.4.8</logback.version>
+        
+        <!-- WildFly Async Configuration -->
+        <job.type>full_build_deploy</job.type>
+        <target.environment>development</target.environment>
+        <priority>normal</priority>
+        <skip.tests>false</skip.tests>
+        <skip.build>false</skip.build>
     </properties>
 
     <modules>
