🔧 Fix Maven async integration with proper profiles
✅ Fixed Issues:
- Moved from executions to profiles for better control
- Added proper working directory configuration
- Created convenient wrapper script for all commands
- Added environment-specific profiles (dev, staging, prod)
- Simplified command execution with proper bash paths

🚀 Usage Examples:
- ./scripts/maven/maven-async-commands.sh start
- ./scripts/maven/maven-async-commands.sh deploy
- mvn validate -Pwildfly-async-status
- mvn validate -Pwildfly-async-deploy -Pdevelopment

🎯 Maven integration now fully working with unified async system

--- a/pom.xml
+++ b/pom.xml
@@ -184,4 +184,151 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <profiles>
+        <!-- WildFly Async System Profiles -->
+        <profile>
+            <id>wildfly-async-start</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>bash</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>scripts/maven/wildfly-async-start.sh</argument>
+                                        <argument>${job.type}</argument>
+                                        <argument>${target.environment}</argument>
+                                        <argument>${priority}</argument>
+                                        <argument>${skip.tests}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>wildfly-async-stop</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>bash</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>scripts/maven/wildfly-async-stop.sh</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>wildfly-async-deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>bash</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>scripts/maven/wildfly-async-deploy.sh</argument>
+                                        <argument>${target.environment}</argument>
+                                        <argument>${skip.tests}</argument>
+                                        <argument>${priority}</argument>
+                                        <argument>${skip.build}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>wildfly-async-status</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>bash</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>scripts/maven/wildfly-async-status.sh</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <!-- Environment-specific profiles -->
+        <profile>
+            <id>development</id>
+            <properties>
+                <target.environment>development</target.environment>
+                <skip.tests>false</skip.tests>
+                <priority>normal</priority>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>staging</id>
+            <properties>
+                <target.environment>staging</target.environment>
+                <skip.tests>false</skip.tests>
+                <priority>normal</priority>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>production</id>
+            <properties>
+                <target.environment>production</target.environment>
+                <skip.tests>false</skip.tests>
+                <priority>urgent</priority>
+            </properties>
+        </profile>
+    </profiles>
 </project>
